--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.0/howler.min.js
+  </script>
 </html>
